--- a/app/components/Duck/styles.css
+++ b/app/components/Duck/styles.css
@@ -1,5 +1,5 @@
 .duckContainer {
-  composes: baseDuckContainer from 'shared/styles.css';
+  composes: baseDuckContainer from 'sharedStyles/styles.css';
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -11,7 +11,7 @@
 }
 
 .avatar {
-  composes: baseAvatar from 'shared/styles.css';
+  composes: baseAvatar from 'sharedStyles/styles.css';
 }
 
 .actionContainer {
@@ -53,7 +53,7 @@
 }
 
 .icon {
-  composes: clickable from 'shared/styles.css';
+  composes: clickable from 'sharedStyles/styles.css';
   height: 25px;
   width: 25px;
   margin-right: 5px;
@@ -65,5 +65,5 @@
 }
 
 .author {
-  composes: clickable from 'shared/styles.css';
+  composes: clickable from 'sharedStyles/styles.css';
 }
